--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cairn PL
+title: Cairn po polsku
 remote_theme: pmarsceill/just-the-docs
 color_scheme: light
 encoding: UTF-8
@@ -6,13 +6,12 @@ plugins:
   - jekyll-redirect-from
 include:
   - js
-  
-  
+
 # Back to top link
 back_to_top: true
 back_to_top_text: "Do góry"
 
-footer_content: "Zawartość dostępna na licencji <a href=\"https://creativecommons.org/licenses/by-sa/4.0\">CC-BY-SA 4.0.</a>"
+footer_content: 'Zawartość dostępna na licencji <a href="https://creativecommons.org/licenses/by-sa/4.0">CC-BY-SA 4.0.</a>'
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
 last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
